--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Link para Backoffice -->
-    <a href="backoffice.html" class="backoffice-link" title="Acessar Backoffice">
-        ⚙️ Admin
-    </a>
-
     <!-- Container principal com padding para a navbar -->
     <div class="app-container">
         <!-- Homepage -->
         <div id="homepage" class="screen active">
             <div class="homepage-content">
-                <div class="logo-placeholder">
-                    LOGO
-                </div>
+                <img src="logo.png" alt="Street Art Stories: Porto a Cores" class="logo-image">
             </div>
         </div>
 
