--- a/index.html
+++ b/index.html
@@ -35,16 +35,6 @@
             </div>
         </div>
 
-        <!-- Imagens (Galeria) -->
-        <div id="images" class="screen">
-            <div class="screen-content">
-                <h1 class="screen-title">Imagens</h1>
-                <div id="images-container" class="images-gallery">
-                    <!-- As imagens serão inseridas via JavaScript -->
-                </div>
-            </div>
-        </div>
-
         <!-- Roteiros -->
         <div id="routes" class="screen">
             <div class="screen-content">
@@ -59,16 +49,13 @@
     <!-- Navbar inferior fixa -->
     <nav class="bottom-navbar">
         <button class="nav-item active" data-screen="homepage">
-            <span class="nav-label">🏠</span>
+            <img src="inicio.png" alt="Início" class="nav-icon">
         </button>
         <button class="nav-item" data-screen="artists-list">
-            <span class="nav-label">🎨</span>
-        </button>
-        <button class="nav-item" data-screen="images">
-            <span class="nav-label">🖼️</span>
+            <img src="artistas.png" alt="Artistas" class="nav-icon">
         </button>
         <button class="nav-item" data-screen="routes">
-            <span class="nav-label">🗺️</span>
+            <img src="roteiros.png" alt="Roteiros" class="nav-icon">
         </button>
     </nav>
 
